k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: routarr
spec:
  type: ClusterIP
  selector:
    app: routarr
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
